[project]
name = "octopus-usage-exporter"
authors = [{ name = "Joseph Ryan-Palmer", email = "joseph@ryan-palmer.com" }]
version = "0.1.7"
description = "Prometheus exporter for Octopus Energy metrics. Works best when coupled with an Octopus Home Mini."
license = "AGPL-3.0-or-later"
license-files = ["LICENSE"]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "gql==4.0.0",
    "prometheus-client==0.23.1",
    "pydantic>=2.12.0",
    "pydantic-settings>=2.11.0",
    "pytest>=8.4.2",
    "python-jose==3.5.0",
    "requests==2.32.5",
    "requests-toolbelt==1.0.0",
    "tenacity>=9.1.2",
]


[project.urls]
Repository = "https://github.com/josephrpalmer/octopus-usage-exporter.git"
Issues = "https://github.com/josephrpalmer/octopus-usage-exporter/issues"

[project.entry-points."octopus_usage_exporter.main"]
main = "app.octopus_usage_exporter:main"
